# rocketing

./: .env  Cargo.toml  README  README.md  Rocket.toml  diesel.toml  docker-compose.yml
migrations/2024-09-27-132543_users/: up.sql
migrations/2024-09-28-144957_persons/: up.sql
migrations/2024-09-30-174541_todos/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs  types.rs
src/routes/: api_routes.rs  db_routes.rs  mod.rs  tera_routes.rs
templates/tera/: base.html.tera  edit-todo.html.tera  footer.html.tera  form-todo.html.tera  form-user.html.tera  index.html.tera  nav.html.tera  todos.html.tera  users.html.tera
templates/tera/error/: 404.html.tera
www/static/: data.txt  not-found.css  styles.css
www/static/css/: not-found.css  styles.css
www/static/document/: doc.txt
www/static/js/: base.js  edit-todo.js  todos.js
