[package]
name = "rocketing"
version = "0.1.0"
edition = "2021"
default-run = "rocketing"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.2.4", features = ["postgres", "r2d2"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
dotenvy = "0.15.0"
serde = "1.0.210"
