[package]
name = "rocketing"
version = "0.1.0"
edition = "2021"
default-run = "rocketing"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
reqwest = { version = "0.12.8", features = ["json"] }
dotenvy = "0.15.0"
serde = "1.0.210"
chrono = "0.4.38"

[dependencies.diesel]
version = "2.2.4"
features = ["postgres", "r2d2"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_postgres_pool"]

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]
